# python-30day-design-challenge

./: .gitattributes  README.md
challenges/01_challenge_kiss/: kiss.py  pyproject.toml
challenges/02_challenge_type_annotations/: after.py  pyproject.toml
challenges/03_challenge_decoupling/: bank.py  main.py  payment_service.py  stripe_service.py
challenges/04_challenge_dry/: after.py
challenges/05_challenge_string_formatting/: after.py
challenges/06_challenge_demeter/: after.py
challenges/07_challenge_improve_discount/: after.py  discounts.py
challenges/08_challenge_payment_strategy/: after.py
challenges/09_challenge_plugins/: factory.py  loader.py  main.py
challenges/09_challenge_plugins/payment_processors/: revolut.py
challenges/10_challenge_oo_to_functional/: after.py
challenges/11_challenge_cohesion/: README.md  after.py  constants.py  pyproject.toml  test_snapshot.py  test_unit.py
challenges/11_challenge_cohesion/snapshots/: snap_test_snapshot.py
