[tool.poetry]
name = "cohesion"
version = "0.1.0"
description = ""
authors = ["ArjanCodes <support@arjancodes.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "^1.5.3"
snapshottest = "^0.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.0.2.230605"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
